Bug 116993 - Crash inserting Fontwork
Summary: Crash inserting Fontwork
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: highest critical
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, haveBacktrace, needUITest, regression
: 117422 117652 (view as bug list)
Depends on:
Blocks: Regressions-AW080
  Show dependency treegraph
 
Reported: 2018-04-13 14:32 UTC by Telesto
Modified: 2018-05-21 20:12 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
gdb backtrace (28.78 KB, text/plain)
2018-04-13 15:06 UTC, Xisco Faulí
Details
bt with debug symbols (12.71 KB, text/plain)
2018-04-15 06:45 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-04-13 14:32:39 UTC
Description:
Crash inserting Fontwork

Steps to Reproduce:
1. Open Calc
2. Insert -> Fontwork
3. Select a fontwork
4. Press OK -> Crash

Actual Results:  
Crash

Expected Results:
No Crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.1.0.0.alpha0+
Build ID: 84e2614a75a615d6c8584b13a69b3368d2a12a3d
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-04-12_09:11:38
Locale: nl-NL (nl_NL); Calc: CL


User-Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Xisco Faulí 2018-04-13 15:04:24 UTC
Regression introduced by:

author	Armin Le Grand <Armin.Le.Grand@cib.de (CIB)>	2018-03-01 15:54:32 +0100
committer	Armin Le Grand <Armin.Le.Grand@cib.de>	2018-04-07 00:28:30 +0200
commit dfefe448c41921f2f1e54d3f69b8b9e89031d055 (patch)
tree 1aace31054b5740e2faffcbc5de66a791be27f7d
parent eba4d5b2b76cefde90cb3d6638c736f435023a45 (diff)
SOSAW080: Added first bunch of basic changes to helpers

Bisected with: bibisect-linux64-6.1

Adding Cc: to Armin Le Grand
Comment 2 Xisco Faulí 2018-04-13 15:06:40 UTC
Created attachment 141340 [details]
gdb backtrace
Comment 3 Julien Nabet 2018-04-15 06:45:29 UTC
Created attachment 141373 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated 2 days ago, I could reproduce this.
I attached a bt because it's different from the one already provided.
+ I let warn logs from console.
Comment 4 Regina Henschel 2018-04-15 12:33:04 UTC
It is an Assertion
File: core/svl/source/items/itempool.cxx
Line: 620
Expression: !pImpl->mpStaticDefaults||typeid(rItem)==typeid(GetDefaultItem(nWich))

tested with Version: 6.1.0.0.alpha0+ (x64)
Build ID: 8b34efff7a7ed13553dfe87cd2413d01c76dec1d
CPU threads: 8; OS: Windows 10.0; UI render: default; 
Locale: de-DE (de_DE); Calc: CL
Comment 5 Telesto 2018-05-04 07:50:49 UTC
*** Bug 117422 has been marked as a duplicate of this bug. ***
Comment 6 Armin Le Grand (collabora) 2018-05-09 17:03:38 UTC
Can reproduce. FontWorkGalleryDialog member mpDestModel is NULL. Checking if this is the case in lo-6-0...
Comment 7 Armin Le Grand (collabora) 2018-05-09 17:31:40 UTC
Same in lo-6-0 -> one of the 'hidden' errors which comes up due to the changes. Seems a 'extra' mode for Calc is in place that uses FontWorkGalleryDialog::SetSdrObjectRef to set 'SdrObject** mppSdrObject' and 'SdrModel* mpDestModel'. This is 'only' called in Calc -> tehse two vars are NULL in other apps -> mpDestModel is *not always* the correct destination SdrModel (despite it's name...).
lo-6-0 uses 'mpSdrView->InsertObjectAtView' as target for the new SdrModel, so the SDrModel from that SdrView *should* be the correct one. This example shows why I do this cleanups...
Comment 8 Armin Le Grand (collabora) 2018-05-09 17:37:59 UTC
Fix on gerrit (see https://gerrit.libreoffice.org/#/c/54045/)
Comment 9 Commit Notification 2018-05-11 09:13:27 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9ddbd8e2bce697ce244a1f6161e8f45312f6e6b2

tdf#116993 corrected FontWork to use correct SdrModel

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Armin Le Grand (collabora) 2018-05-11 14:41:44 UTC
Checked with current master (fix is in), could not reproduce anymore
Comment 11 raal 2018-05-21 20:11:18 UTC
*** Bug 117652 has been marked as a duplicate of this bug. ***
Comment 12 raal 2018-05-21 20:12:38 UTC
Verified in Version: 6.1.0.0.alpha1+
Build ID: db608e8e5e27cce8eeda26918bcab71222d342df
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3; 

Thanks for the fix.