tdf#116993 corrected FontWork to use correct SdrModel

Had to adapt FontWorkGalleryDialog::insertSelectedFontwork()
to use the correct target-SdrModel when cloning the FontWork
SdrObject. This is due to FontWorkGalleryDialog being used
differently from Calc - it calls SetSdrObjectRef to set an
exceptional SdrModel as target which I took as the always
to-be-used target SdrModel - due to it's name 'mpDestModel'.

Change-Id: Ia4860283082f041711b8c31952fd2c398eeac30e
Reviewed-on: https://gerrit.libreoffice.org/54045
Reviewed-by: Armin Le Grand <Armin.Le.Grand@cib.de>
Tested-by: Jenkins <ci@libreoffice.org>